# Delaunay-Spatial-Classifier

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  REPRODUCING.md  requirements.txt  run
data/cached/: bloodmnist_test_centroids.csv  bloodmnist_train_centroids.csv  earthquake_raw.csv  sfcrime_raw.csv
include/: DelaunayClassifier.h
results/: ablation_blobs.csv  ablation_bloodmnist.csv  ablation_cancer.csv  ablation_cassini.csv  ablation_checkerboard.csv  ablation_circles.csv  ablation_digits.csv  ablation_dynamic_blobs.csv  ablation_dynamic_bloodmnist.csv  ablation_dynamic_cancer.csv  ablation_dynamic_cassini.csv  ablation_dynamic_checkerboard.csv  ablation_dynamic_circles.csv  ablation_dynamic_digits.csv  ablation_dynamic_earthquake.csv  ablation_dynamic_gaussian_quantiles.csv  ablation_dynamic_iris.csv  ablation_dynamic_moons.csv  ablation_dynamic_spiral.csv  ablation_dynamic_summary.csv  ablation_dynamic_wine.csv  ablation_earthquake.csv  ablation_gaussian_quantiles.csv  ablation_iris.csv  ablation_moons.csv  ablation_spiral.csv  ablation_summary.csv  ablation_wine.csv  bucket_type_distribution.csv  clean_points.csv  cpp_benchmark_blobs.csv  cpp_benchmark_bloodmnist.csv  cpp_benchmark_cancer.csv  cpp_benchmark_cassini.csv  cpp_benchmark_checkerboard.csv  cpp_benchmark_circles.csv  cpp_benchmark_digits.csv  cpp_benchmark_earthquake.csv  cpp_benchmark_gaussian_quantiles.csv  cpp_benchmark_iris.csv  (+14 more)
results/logs/: dynamic_logs.csv
scripts/: ablation_study.py  benchmark.py  benchmark_cv.py  data_generator.py  generate_2d_buckets_figure.py  generate_datasets.py  generate_dynamic_insertion_demo.py  generate_figures.py  generate_publication_figures.py  generate_simple_query_demo.py  generate_spatial_datasets.py  run_full_sweep.sh  scalability_test.py  visualizer.py
src/: DelaunayClassifier.cpp  ablation_bench.cpp  benchmark.cpp  main.cpp
tests/: test_classifier.py
